--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 <body>
     <div class="container">
         <h1>Choose Your Destination</h1>
-        <a class="link" href="YOUR_ZOMATO_LINK" target="_blank">🍴 Visit Zomato Restaurant</a><br>
-        <a class="link" href="YOUR_SWIGGY_LINK" target="_blank">🍔 Visit Swiggy Restaurant</a><br>
+        <a class="link" href="https://www.zomato.com/mumbai/heramb-food-mahakali/order" target="_blank">🍴 Visit Zomato Restaurant</a><br>
+        <a class="link" href="https://www.swiggy.com/city/mumbai/heramb-andheri-east-rest981891" target="_blank">🍔 Visit Swiggy Restaurant</a><br>
         <a class="link" href="YOUR_INSTAGRAM_LINK" target="_blank">📸 Visit Instagram Profile</a>
     </div>
 </body>
