--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h1>Choose Your Destination</h1>
         <a class="link" href="https://www.zomato.com/mumbai/heramb-food-mahakali/order" target="_blank">🍴 Visit Zomato Restaurant</a><br>
         <a class="link" href="https://www.swiggy.com/city/mumbai/heramb-andheri-east-rest981891" target="_blank">🍔 Visit Swiggy Restaurant</a><br>
-        <a class="link" href="YOUR_INSTAGRAM_LINK" target="_blank">📸 Visit Instagram Profile</a>
+        <a class="link" href="https://www.instagram.com/herambkitchen/?hl=en" target="_blank">📸 Visit Instagram Profile</a>
     </div>
 </body>
 </html>
